force-app/main/default/objects/QR_Codes_from_Detrack__c/QR_Codes_from_Detrack__c.object-meta.xml
<CustomObject>
    <description>Where QR codes from Detrack are stored. On insertion a trigger will be fired to parse the codes field by &quot;\n&quot; or &quot; &quot; and insert a new Qr_code__c for each parsed value. The Driver app will then pick up these Qr_code__c records.</description>
    <label>QR Codes from Detrack</label>
    <nameField>
        <displayFormat>QRS-{00000000}</displayFormat>
        <label>QR Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QR Codes from Detrack</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>