force-app/main/default/objects/QR_Codes_from_Detrack__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gets location id from Order process to create record</description>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QR Codes from Detrack</relationshipLabel>
    <relationshipName>QR_Codes_from_Detrack</relationshipName>
    <type>Lookup</type>
</CustomField>