force-app/main/default/objects/QR_Codes_from_Detrack__c/fields/Number_of_codes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_codes__c</fullName>
    <description>Populated by trigger with total number of parsed values from QR_Codes_from_OrderItem__c</description>
    <label>Number of codes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>