force-app/main/default/objects/QR_Codes_from_Detrack__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup populated from process to relate the record back to it&apos;s original OrderItem</description>
    <label>OrderItem</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>QR Codes from Detrack</relationshipLabel>
    <relationshipName>QR_Codes_from_Detrack</relationshipName>
    <type>Lookup</type>
</CustomField>