force-app/main/default/objects/QR_Codes_from_Detrack__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>QR Codes from Detrack</relationshipLabel>
    <relationshipName>QR_Codes_from_Detrack</relationshipName>
    <type>Lookup</type>
</CustomField>