force-app/main/default/objects/QR_Codes_from_Detrack__c/fields/QR_Codes_from_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>QR_Codes_from_OrderItem__c</fullName>
    <description>Populated by process on orderItem that creates record whenever the detrack QR code field is populated</description>
    <label>QR Codes from OrderItem</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>