force-app/main/default/objects/QR_Codes_from_Detrack__c/fields/QR_From_Detrack_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>QR_From_Detrack_Case_Safe_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR From Detrack Case Safe ID</label>
    <type>Text</type>
</CustomField>