force-app/main/default/objects/QR_Codes_from_Detrack__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>OrderItem__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderItem__c</field>
        <operation>equals</operation>
        <value>8024L0000008zLPQAY</value>
    </filters>
    <label>All</label>
</ListView>